--- a/style.css
+++ b/style.css
@@ -5,3 +5,10 @@
 .purple{
     color: #5E3BEE !important;
 }
+.herobtn{
+    background-color: #5E3BEE !important;
+    color:white !important;
+}
+.para{
+    color: #5E3BEE !important;
+}
